edition = "2023";

package protobuf;

option features.field_presence = EXPLICIT;

message Movie {
    int32 id = 1;
    string title = 2;
    repeated string genres = 3;
    string release_date = 4;
    repeated string production_countries = 5;
    int32 budget = 6;
    int32 revenue = 7;
    string overview = 8;
}

message Movies {
    repeated Movie list = 1;
}